# Jarvis

./: .gitignore  README.md  check_basic_imports.py  check_db.py  jarvis.db  main.py  pyproject.toml  requirements.txt  setup.ps1  test_imports.py  test_vision.py  test_vision_v2.py  test_vision_v3.py
action/: action_layer.py
config/: config.yaml
core/: agent_loop.py  decision_engine.py  event_bus.py  state_machine.py
core/skills/: app_launcher_skill.py  automation_skill.py  base.py  conversation_skill.py  deep_thought_skill.py  fun_skill.py  learning_skill.py  math_skill.py  media_skill.py  omni_brain_skill.py  productivity_skill.py  protocol_skill.py  system_health_skill.py  system_skill.py  tactical_vision_skill.py  vision_learning_skill.py  vision_skill.py  web_search_skill.py
memory/: conversation_history.py  database.py  jarvis_v2.db
perception/: audio_listener.py  perception_layer.py  vision_corrector.py
personality/: response_generator.py
