[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "mediapipe>=0.10.32",
    "numpy>=2.1.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "psutil>=7.2.2",
    "pyautogui>=0.9.54",
    "pyttsx3>=2.99",
    "pywin32>=311",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.6.0",
    "sounddevice>=0.5.5",
    "vosk>=0.3.45",
    "requests>=2.32.0",
    "duckduckgo-search>=6.0.0",
    "ultralytics>=8.4.17",
    "onnxruntime>=1.24.2",
    "deepface>=0.0.98",
    "tf-keras>=2.18.0",
]
